@@ -1,3 +1,10 @@
+1999-11-22  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>
+
+	* pccl-20.el, pccl-om.el: Removed "[SOURCE INFO]" style
+	comment from docstrings.
+
+	* pccl-om.el, localhook.el, pcustom.el: Updated header.
+
 1999-11-13  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>
 
 	* Removed "[SOURCE INFO]" style comment from docstrings.
